<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name"><xliff:g>Github Users</xliff:g></string>
    <string name="settings">Settings</string>
    <string name="search_username">Search username</string>
    <string name="username">Username</string>
    <string name="id">Id</string>
    <string name="no_result">No username found</string>
    <string name="to_type">Type to get results</string>
    <string name="name">Name</string>
    <string name="company">Company</string>
    <string name="location">Location</string>
    <string name="follower">Follower</string>
    <string name="following">Following</string>
    <string name="repository">Repository</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="following_number">100</string>
    <string name="repository_number">100</string>
    <string name="follower_number">100</string>
    <string name="desc_user_image">User Image</string>
    <string name="desc_name_icon">Name icon</string>
    <string name="desc_company_icon">Company icon</string>
    <string name="desc_location_icon">Location icon</string>
    <string name="kilo">K</string>
    <string name="mega">M</string>
    <string name="desc_error_image">An Error Occurred</string>
    <string name="desc_not_found">No username found</string>
    <string name="desc_to_type">Type to get result</string>
    <string name="desc_github_logo">Github Logo</string>
    <string name="favorite">Favorite</string>
    <string name="language_settings">Language settings</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="dark_mode_on">On</string>
    <string name="dark_mode_off">Off</string>
    <string name="desc_favorite_button">Favorite Button</string>
    <string name="delete_favorite">%s removed from favorites list</string>
    <string name="add_favorite">%s added to favorites list</string>
    <string name="empty_favorite">Empty favorite list</string>
</resources>