<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/coordinator"
    tools:context=".ui.detail.DetailUserActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?android:colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/detail_top_appbar"
                    android:layout_width="match_parent"
                    android:layout_height="?actionBarSize"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:navigationIcon="@drawable/ic_arrow_back"
                    app:title="@string/username"
                    app:menu="@menu/menu_share"
                    app:titleTextAppearance="@style/Text.UsernameTitle"
                    app:titleTextColor="@color/white" />

                <include
                    android:id="@+id/view_detail_loading"
                    layout="@layout/view_detail_loading"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/detail_top_appbar" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/detail_img_avatar"
                    android:layout_width="110dp"
                    android:layout_height="110dp"
                    android:layout_marginStart="16dp"
                    android:contentDescription="@string/desc_user_image"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/detail_top_appbar"
                    tools:src="@tools:sample/avatars" />

                <ImageView
                    android:id="@+id/ic_name"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_marginTop="8dp"
                    android:contentDescription="@string/desc_name_icon"
                    android:src="@drawable/ic_name"
                    app:layout_constraintStart_toStartOf="@+id/detail_img_avatar"
                    app:layout_constraintTop_toBottomOf="@+id/detail_img_avatar" />

                <TextView
                    android:id="@+id/detail_tv_name"
                    style="@style/Text.Content.Small"
                    android:layout_marginStart="8dp"
                    android:paddingEnd="32dp"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="@+id/ic_name"
                    app:layout_constraintStart_toEndOf="@+id/ic_name"
                    app:layout_constraintTop_toTopOf="@+id/ic_name"
                    tools:ignore="RtlSymmetry"
                    tools:text="@string/name" />

                <ImageView
                    android:id="@+id/ic_company"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_marginTop="6dp"
                    android:contentDescription="@string/desc_company_icon"
                    android:src="@drawable/ic_company"
                    app:layout_constraintStart_toStartOf="@+id/ic_name"
                    app:layout_constraintTop_toBottomOf="@+id/detail_tv_name" />

                <TextView
                    android:id="@+id/detail_tv_company"
                    style="@style/Text.SubContent.Small"
                    android:layout_marginStart="8dp"
                    android:paddingEnd="32dp"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="@+id/ic_company"
                    app:layout_constraintStart_toEndOf="@+id/ic_company"
                    app:layout_constraintTop_toTopOf="@+id/ic_company"
                    tools:ignore="RtlSymmetry"
                    tools:text="@string/company" />

                <ImageView
                    android:id="@+id/ic_location"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_marginTop="7dp"
                    android:layout_marginBottom="8dp"
                    android:contentDescription="@string/desc_location_icon"
                    android:src="@drawable/ic_location"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/ic_company"
                    app:layout_constraintTop_toBottomOf="@+id/detail_tv_company" />

                <TextView
                    android:id="@+id/detail_tv_location"
                    style="@style/Text.SubContent.Small"
                    android:layout_marginStart="8dp"
                    android:paddingEnd="32dp"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="@+id/ic_location"
                    app:layout_constraintStart_toEndOf="@+id/ic_location"
                    app:layout_constraintTop_toTopOf="@+id/ic_location"
                    tools:ignore="RtlSymmetry"
                    tools:text="@string/location" />


                <TextView
                    android:id="@+id/follower_label"
                    style="@style/Text.SubContent.Small"
                    android:layout_width="70dp"
                    android:gravity="center"
                    android:text="@string/follower"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="@+id/detail_img_avatar"
                    app:layout_constraintEnd_toStartOf="@+id/following_label"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@id/detail_img_avatar"
                    app:layout_constraintTop_toTopOf="@+id/detail_img_avatar"
                    app:layout_constraintVertical_bias="0.494" />

                <TextView
                    android:id="@+id/following_label"
                    style="@style/Text.SubContent.Small"
                    android:layout_width="70dp"
                    android:gravity="center"
                    android:text="@string/following"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toStartOf="@+id/repository_label"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/follower_label"
                    app:layout_constraintTop_toTopOf="@+id/follower_label" />

                <TextView
                    android:id="@+id/repository_label"
                    style="@style/Text.SubContent.Small"
                    android:layout_width="70dp"
                    android:gravity="center"
                    android:text="@string/repository"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/following_label"
                    app:layout_constraintTop_toTopOf="@+id/follower_label" />

                <TextView
                    android:id="@+id/detail_tv_follower"
                    style="@style/Text.Content.Big"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toTopOf="@+id/follower_label"
                    app:layout_constraintEnd_toEndOf="@+id/follower_label"
                    app:layout_constraintStart_toStartOf="@+id/follower_label"
                    tools:text="@string/follower_number" />

                <TextView
                    android:id="@+id/detail_tv_following"
                    style="@style/Text.Content.Big"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toTopOf="@+id/following_label"
                    app:layout_constraintEnd_toEndOf="@+id/following_label"
                    app:layout_constraintStart_toStartOf="@+id/following_label"
                    tools:text="@string/following_number" />


                <TextView
                    android:id="@+id/detail_tv_repository"
                    style="@style/Text.Content.Big"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toTopOf="@+id/repository_label"
                    app:layout_constraintEnd_toEndOf="@+id/repository_label"
                    app:layout_constraintStart_toStartOf="@+id/repository_label"
                    tools:text="@string/repository_number" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:colorPrimary"
            app:tabIndicatorColor="@color/white"
            app:tabIndicatorHeight="4dp"
            app:tabTextAppearance="@style/Text.Content.Small"
            app:tabTextColor="@color/white" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="@string/desc_favorite_button"
        android:foregroundGravity="bottom"
        app:fabSize="normal"
        app:layout_anchor="@id/view_pager"
        app:layout_anchorGravity="bottom|end"
        app:srcCompat="@drawable/ic_favorite" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>